2/28/11 account for arrow head offset in layout of bars in chart, so that bar doesn't move around horizontally
2/28/11 make GameResultNode use Function1 for creating content below face node
2/28/11 make NotBalancedNode immutable
2/28/11 first pass at showing bar charts or balanace scales in "not balanced" popup
2/28/11 randomly choose bar charts or balance scales for each Game problem
2/28/11 make "not balanced" result aware of the current equation
2/28/11 move GameResultNode inner subclasses to their own files
2/28/11 replace duplicate alignment code in GameCanvas with PNodeLayoutUtils.alignInside
2/28/11 adjust layout when "Not Balanaced" popup bounds changes
2/28/11 add developer control for showing/hiding bar charts and balance scales in Game
# 0.00.08 (49226) Feb 24, 2011
2/24/11 dev version to demonstrate Game
2/24/11 change "molecules are hidden" color to white, so it's visible on default black background
2/24/11 tweak the equation layout so that symbols like C2H5OH don't crowd the plus signs
2/24/11 rename package module.balanceequation to module.introduction
2/24/11 push "Hide molecules" feature into BoxesNode, to remove duplicate code in canvases
2/24/11 implement "Hide molecules" feature for Game
2/24/11 rename GamePrompt to GameState, document the approach used in Game
2/24/11 change internal terminology from "problems" to "equations" in Game
2/24/11 consistent handling of vertical spacing in Game
2/24/11 rename "Balance Equation" tab to "Introduction"
2/24/11 rename "Game" tab to "Balancing Game"
2/24/11 make popups for game results draggable, in case they obscure something
2/24/11 reduce height of Game boxes since max coefficient is smaller
2/24/11 reduce max coefficient in Game to 7, delete 1 equation that had higher coefficents (P4 + 10Cl2 -> 4PCl5)
2/24/11 tweak atom scaling factor with KL, make smaller atoms smaller
2/24/11 tweak some molecule conformations with KL
2/23/11 fix recording of best times