@@ -1,3 +1,5 @@
+2/28/11 standardize placement of answer, below left box
+2/28/11 add "Developer->Show answer" menu item, off by default
 2/28/11 account for arrow head offset in layout of bars in chart, so that bar doesn't move around horizontally
 2/28/11 make GameResultNode use Function1 for creating content below face node
 2/28/11 make NotBalancedNode immutable
